--- a/wwwrp/package.json
+++ b/wwwrp/package.json
@@ -72,13 +72,13 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "process": "^0.11.10",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-loader": "^7.0.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
